--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "rxjs": "^7.2.0",
     "sqlite": "^4.1.1",
     "sqlite3": "^5.0.8",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
@@ -85,7 +86,9 @@
       "json",
       "ts"
     ],
-    "moduleDirectories": ["./"],
+    "moduleDirectories": [
+      "./"
+    ],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
